--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-jsdoc": "^0.5.7",
-    "jasmine-node": "~1.14.5"
+    "jasmine-node": "~1.14.5",
+    "jsdoc": "^3.3.0-beta1",
+    "jsdoc-baseline": "https://github.com/hegemonic/baseline/tarball/master"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/logikum/business-objects.git"
   },
   "engines": {
-    "node" : ">=0.10.0"
+    "node": ">=0.10.0"
   }
 }
