--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-exec": "^0.4.6",
     "grunt-jsdoc": "^0.5.7",
-    "jasmine-node": "~1.14.5",
+    "grunt-remove-plus-remove-empty": "^0.2.0",
+    "jasmine-node": "^1.14.5",
     "jsdoc": "^3.3.0-beta1",
     "jsdoc-baseline": "https://github.com/hegemonic/baseline/tarball/master"
   },
