--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-exec": "^0.4.6",
     "grunt-jsdoc": "^0.5.7",
     "grunt-remove-plus-remove-empty": "^0.2.0",
+    "ink-docstrap": "^0.5.2",
     "jasmine-node": "^1.14.5",
     "jsdoc": "^3.3.0-beta1",
     "jsdoc-baseline": "https://github.com/hegemonic/baseline/tarball/master"
