--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "Mármarosi József <marmarosi@logikum.hu>",
   "main": "source/index.js",
   "scripts": {
-    "test": "jasmine-node ./tests",
-    "documentation": "grunt default"
+    "test-unit": "jasmine-node tests/unit --color",
+    "test-core": "jasmine-node tests/core --color",
+    "test-mc": "jasmine-node tests/mc --color",
+    "doc-docstrap": "grunt docstrap",
+    "doc-baseline": "grunt baseline"
   },
-  "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-exec": "^0.4.6",
     "grunt-jsdoc": "^0.5.7",
     "grunt-remove-plus-remove-empty": "^0.2.0",
