--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "doc-baseline": "grunt baseline"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-exec": "^0.4.6",
-    "grunt-jsdoc": "^0.5.7",
+    "grunt-jsdoc": "^2.0.0",
     "grunt-remove-plus-remove-empty": "^0.2.0",
-    "ink-docstrap": "^0.5.2",
+    "ink-docstrap": "^1.1.4",
     "jasmine-node": "^1.14.5",
-    "jsdoc": "^3.3.0-beta1",
+    "jsdoc": "^3.4.0",
     "jsdoc-baseline": "https://github.com/hegemonic/baseline/tarball/master"
   },
   "repository": {
