--- a/source/package.json
+++ b/source/package.json
@@ -1,6 +1,6 @@
 {
   "name": "business-objects",
-  "version": "1.5.0",
+  "version": "2.0.0-dev",
   "description": "a JavaScript object-oriented business layer for Node.js",
   "keywords": [
     "business objects"
