--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "business-objects",
-  "version": "2.0.0-dev",
+  "version": "2.0.0",
   "description": "a JavaScript object-oriented business layer for Node.js",
   "keywords": [
     "business objects"
@@ -33,6 +33,6 @@
   },
   "bugs": "https://github.com/logikum/business-objects/issues",
   "engines": {
-    "node": ">=4.2.0"
+    "node": ">=6.0.0"
   }
 }
